add securityconfig file